[package]
name = "obu"
version = "0.1.0"
authors = ["LudeeD <lfssilva@ua.pt>"]
edition = "2018"


[dependencies]

rocket = "0.4.1"

reqwest = "0.9.13"

protobuf = "2.4.2"
sawtooth-sdk = "0.2"
rust-crypto = "0.2.36"
openssl = "0.10"

base64 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.9"

#maybe this could be done in another way
geohash-16 = "0.1.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]
